[gd_scene load_steps=14 format=2]

[ext_resource path="res://menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/sprites/main_menu_background.png" type="Texture" id=2]
[ext_resource path="res://menu/sprites/main_menu_mountains.png" type="Texture" id=3]
[ext_resource path="res://fonts/ImperialOne.otf" type="DynamicFontData" id=4]
[ext_resource path="res://menu/sounds/UIOK.ogg" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=1]


[sub_resource type="StyleBoxEmpty" id=2]


[sub_resource type="StyleBoxEmpty" id=3]


[sub_resource type="StyleBoxEmpty" id=4]


[sub_resource type="DynamicFont" id=5]

size = 110
outline_size = 8
outline_color = Color( 0.0235294, 0.0352941, 0.0862745, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]


[sub_resource type="StyleBoxEmpty" id=7]


[sub_resource type="StyleBoxEmpty" id=8]


[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="BgFg" type="TextureRect" parent="."]
margin_top = 55.9998
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 804.0
margin_top = 401.0
margin_right = 1115.0
margin_bottom = 679.0

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 311.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 156, 68 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Play"

[node name="Ok" type="AudioStreamPlayer" parent="CenterContainer/VBoxContainer/Play"]
stream = ExtResource( 5 )

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 311.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 156, 68 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Quit"

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Play" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Play", true ]]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/Play" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Play", false ]]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Play" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Play", true ]]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Play" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Play", false ]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/Quit" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Quit", true ]]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/Quit" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Quit", false ]]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Quit" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Quit", true ]]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Quit" to="." method="set_expanded" binds= [ "CenterContainer/VBoxContainer/Quit", false ]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
